--- a/src/app.css
+++ b/src/app.css
@@ -6,14 +6,25 @@
 
 html,
 body {
+    font-family: sans-serif;
+    background-color: silver;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    max-height: 100vh;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    height: 100vh;
 }
 
 .header {
     display: flex;
     justify-content: center;
-    font-family: 'Fredericka the Great', cursive;
 }
