--- a/src/components/home.css
+++ b/src/components/home.css
@@ -7,11 +7,16 @@ p {
 img {
     height: 50%;
     width: 50%;
-    margin: 20px
+    max-width: 500px;
+    margin: 20px;
 }
 
 .homeContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgb(0, 34, 81);
+    border-radius: 10px;
+    margin: 20px;
+    color: white;
 }
