--- a/src/app.css
+++ b/src/app.css
@@ -27,4 +27,13 @@ body {
 .header {
     display: flex;
     justify-content: center;
+    align-self: center;
+    background-color: rgb(176, 141, 0);
+    margin: 0;
+    width: fit-content;
+    padding: 15px;
+    margin-top: 5px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    color: white;
 }
