--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -6,5 +6,14 @@
 }
 
 .item {
-    width: min-content;
+    background-color: gray;
+    padding: 5px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.item input {
+    width: 50%;
 }
