--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,4 +1,4 @@
-p {
+.heroText {
     margin: auto;
     margin-top: 20px;
     width: 80%;
@@ -15,7 +15,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(0, 34, 81);
+    background-color: gray;
     border-radius: 10px;
     margin: 20px;
     color: white;
