--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -1,19 +1,88 @@
+* {
+    color: white;
+}
+
 .itemList {
+    width: 100%;
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
     margin: 10px;
+    align-content: center;
+    justify-items: center;
 }
 
 .item {
+    width: 250px;
     background-color: gray;
-    padding: 5px;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    padding: 5px;
 }
 
 .item input {
-    width: 50%;
+    background-color: rgb(57, 57, 57);
+    border: none;
+    border-radius: 5px;
+    margin-right: 5px;
+    width: 3em;
+}
+
+input::-webkit-inner-spin-button {
+    opacity: 1
+}
+
+input:focus {
+    outline: none;
+}
+
+button {
+    background-color: rgb(176, 141, 0);
+    border: none;
+    padding: 3px;
+    border-radius: 5px;   
+}
+
+button:hover {
+    background-color: gold;
+}
+
+.cartBar {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    background-color: gray;
+    column-gap: 10px;
+    width: 100%;
+}
+
+.cartBar button {
+    margin-left: 10px;
+}
+
+p {
+    margin: 0;
+}
+
+.quantBar {
+    display: flex;
+    justify-content: center;
+}
+
+.priceText {
+    font-size: small;
+}
+
+.shopContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.productImg {
+    border-radius: 5px;
+    height: 150px;
+    width: 150px;
 }
