--- a/src/components/home.css
+++ b/src/components/home.css
@@ -15,7 +15,6 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: gray;
     border-radius: 10px;
     margin: 20px;
     color: white;
@@ -27,4 +26,9 @@ img {
 .pictureCredit {
     align-self: flex-end;
     margin-right: 10px;
+    font-size: small;
+}
+
+.pictureCredit a {
+    color: white;
 }
