--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -1,7 +1,3 @@
-* {
-    color: white;
-}
-
 .itemList {
     width: 100%;
     display: grid;
@@ -13,7 +9,8 @@
 }
 
 .item {
-    background-color: gray;
+    background-color: rgb(255, 255, 255);
+    color: rgb(57, 57, 57);
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -21,10 +18,12 @@
     padding: 5px;
     opacity: 50%;
     transition: opacity 0.3s ease-in-out;
+    border: 1px solid rgb(57, 57, 57);
 }
 
 .item:hover {
     opacity: 100%;
+    transform: scale(1.1);
 }
 
 .item input {
@@ -33,6 +32,7 @@
     border-radius: 5px;
     margin-right: 5px;
     width: 3em;
+    color: white;
 }
 
 input::-webkit-inner-spin-button {
@@ -44,23 +44,28 @@ input:focus {
 }
 
 button {
-    background-color: rgb(176, 141, 0);
+    background-color: rgb(255, 0, 0);
     border: none;
     padding: 3px;
-    border-radius: 5px;   
+    border-radius: 5px;
+    color: white;
+    width: fit-content;
+    display: flex;
+    align-items: center;
 }
 
 button:hover {
-    background-color: gold;
+    background-color: rgb(156, 0, 0);
 }
 
 .cartBar {
     padding: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     background-color: gray;
     column-gap: 10px;
     width: 100%;
+    color: white;
 }
 
 .cartBar button {
@@ -76,8 +81,11 @@ p {
     justify-content: center;
 }
 
-.priceText {
+.priceText
+.itemDescription {
     font-size: small;
+    text-align: center;
+    text-align-last: center;
 }
 
 .shopContainer {
@@ -90,4 +98,17 @@ p {
     border-radius: 5px;
     height: 150px;
     width: 150px;
+}
+
+.cartIconQuant {
+    margin-left: -10px;
+    background-color: white;
+    color: rgb(255, 0, 0);
+    margin-top: -20px;
+    width:15px;
+    height:15px;
+    border-radius:7.5px;
+    font-size:15px;
+    line-height:15px;
+    text-align:center;
 }
