--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -27,12 +27,13 @@
 }
 
 .item input {
-    background-color: rgb(57, 57, 57);
+    background-color: rgb(255, 0, 0);
     border: none;
     border-radius: 5px;
     margin-right: 5px;
     width: 3em;
     color: white;
+    text-align: center;
 }
 
 input::-webkit-inner-spin-button {
@@ -62,10 +63,9 @@ button:hover {
     padding: 10px;
     display: flex;
     justify-content: flex-end;
-    background-color: gray;
     column-gap: 10px;
     width: 100%;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 .cartBar button {
