--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -2,9 +2,26 @@
     display: flex;
     justify-content: space-between;
     background-color: white;
+    width: 80%;
+    margin: auto;
+    padding: 5px;
+}
+
+.checkoutTable:first-of-type {
+    border-top-left-radius: 5px ;
+    border-top-right-radius: 5px;
+}
+
+.checkoutTable:last-of-type {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 p {
     width: 100%;
     text-align: center;
+}
+
+.checkoutTop {
+    margin-top: 20px;
 }
