--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -1,27 +1,46 @@
 .checkoutTable {
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
     width: 80%;
     margin: auto;
-    padding: 5px;
+    padding: 10px;
+}
+
+p {
+    width: 100%;
+    text-align: end;
 }
 
 .checkoutTable:first-of-type {
     border-top-left-radius: 5px ;
     border-top-right-radius: 5px;
+    font-size: 20px;
+    font-weight: 600;
+    color: red;
+    border-bottom: 1px solid gray;
 }
 
 .checkoutTable:last-of-type {
+    border-top: 1px solid gray;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
-p {
-    width: 100%;
-    text-align: center;
+.emptyCart {
+    font-size: 100px;
+    color: red;
 }
 
 .checkoutTop {
     margin-top: 20px;
+}
+
+.totalRow {
+    display: flex;
+    justify-content: space-between;
+}
+
+.totalRow p {
+    text-align: none;
 }
