--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -112,3 +112,9 @@ p {
     line-height:15px;
     text-align:center;
 }
+
+.link {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+}
