--- a/src/components/cart.css
+++ b/src/components/cart.css
@@ -10,6 +10,7 @@
 p {
     width: 100%;
     text-align: end;
+    color: rgb(79, 79, 79);
 }
 
 .checkoutTable:first-of-type {
@@ -17,7 +18,6 @@ p {
     border-top-right-radius: 5px;
     font-size: 20px;
     font-weight: 600;
-    color: red;
     border-bottom: 1px solid gray;
 }
 
