Fix shop page CSS

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -29,9 +29,10 @@ img {
     align-self: flex-end;
     margin-right: 10px;
     font-size: small;
+    color: white;
 }
 
-.pictureCredit a {
+a {
     color: white;
 }
 
