--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -72,20 +72,9 @@ button:hover {
     margin-left: 10px;
 }
 
-p {
-    margin: 0;
-}
-
 .quantBar {
     display: flex;
     justify-content: center;
-}
-
-.priceText
-.itemDescription {
-    font-size: small;
-    text-align: center;
-    text-align-last: center;
 }
 
 .shopContainer {
@@ -114,7 +103,19 @@ p {
 }
 
 .link {
-    color: white;
     text-decoration: none;
     font-size: 16px;
+}
+
+.priceText
+.itemDescription {
+    font-size: small;
+    text-align: center;
+    text-align-last: center;
+}
+
+.priceText,
+.itemName {
+    display: flex;
+    justify-content: center;
 }
