--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -93,7 +93,7 @@ button:hover {
     margin-left: -10px;
     background-color: white;
     color: rgb(255, 0, 0);
-    margin-top: -20px;
+    margin-top: -5px;
     width:15px;
     height:15px;
     border-radius:7.5px;
@@ -105,6 +105,7 @@ button:hover {
 .link {
     text-decoration: none;
     font-size: 16px;
+    display: flex;
 }
 
 .priceText
